packages/jsii/test/negatives/neg.compilation-error.ts
///!MATCH_ERROR: Cannot find name 'boom'.
///!MATCH_ERROR: Cannot find name 'CompilerErrorIsHere'.

boom! >CompilerErrorIsHere
